--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.2",
+    "angular-star-rating": "^7.0.0",
     "express": "^4.18.2",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
